--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,16 +149,13 @@ set(SOURCE_FILES
     compiler/optimizing/artist/artist_utils.h
     compiler/optimizing/artist/blacklist.cc
     compiler/optimizing/artist/blacklist.h
-    compiler/optimizing/artist/env/analyzer_environment.cc
-    compiler/optimizing/artist/env/analyzer_environment.h
-    compiler/optimizing/artist/env/artist_environment.cc
-    compiler/optimizing/artist/env/artist_environment.h
-    compiler/optimizing/artist/env/codelib_environment.cc
-    compiler/optimizing/artist/env/codelib_environment.h
-    compiler/optimizing/artist/env/codelib.cc
-    compiler/optimizing/artist/env/codelib.h
-    compiler/optimizing/artist/env/java_env.cc
-    compiler/optimizing/artist/env/java_env.h
+        compiler/optimizing/artist/env/artist_environment.cc
+        compiler/optimizing/artist/env/artist_environment.h
+        compiler/optimizing/artist/env/codelib_environment.cc
+        compiler/optimizing/artist/env/codelib_environment.h
+        compiler/optimizing/artist/env/codelib.h
+        compiler/optimizing/artist/env/java_env.cc
+        compiler/optimizing/artist/env/java_env.h
     compiler/optimizing/artist/injection/boolean.h
     compiler/optimizing/artist/injection/byte.h
     compiler/optimizing/artist/injection/short.h
@@ -185,13 +182,14 @@ set(SOURCE_FILES
     compiler/optimizing/artist/method_info.h
     compiler/optimizing/artist/method_info_factory.cc
     compiler/optimizing/artist/method_info_factory.h
-    compiler/optimizing/artist/modules/analyzer/logtimization.cc
-    compiler/optimizing/artist/modules/analyzer/logtimization.h
-    compiler/optimizing/artist/modules/generic/injections.h
-    compiler/optimizing/artist/modules/generic/universal_artist.cc
-    compiler/optimizing/artist/modules/generic/universal_artist.h
-    compiler/optimizing/artist/modules/method-tracing/trace_artist.cc
-    compiler/optimizing/artist/modules/method-tracing/trace_artist.h
+    compiler/optimizing/artist/modules/logtimization/logtimization_artist.cc
+    compiler/optimizing/artist/modules/logtimization/logtimization_artist.h
+    compiler/optimizing/artist/injection/universal_artist.cc
+    compiler/optimizing/artist/injection/universal_artist.h
+    compiler/optimizing/artist/modules/trace/trace_artist.cc
+    compiler/optimizing/artist/modules/trace/trace_artist.h
+    compiler/optimizing/artist/modules/trace/trace_codelib.cc
+    compiler/optimizing/artist/modules/trace/trace_codelib.h
     compiler/optimizing/artist/param_finder.cc
     compiler/optimizing/artist/param_finder.h
     compiler/optimizing/artist/verbose_printer.cc
@@ -1138,7 +1136,14 @@ set(SOURCE_FILES
     tools/dmtracedump/createtesttrace.cc
     tools/dmtracedump/profile.h
     tools/dmtracedump/tracedump.cc
-)
+    compiler/optimizing/artist/modules/module_manager.cc
+    compiler/optimizing/artist/modules/module_manager.h
+    compiler/optimizing/artist/modules/module.h
+    compiler/optimizing/artist/modules/trace/trace_module.cc
+    compiler/optimizing/artist/modules/trace/trace_module.h
+    compiler/optimizing/artist/modules/logtimization/logtimization_module.cc
+    compiler/optimizing/artist/modules/logtimization/logtimization_module.h compiler/optimizing/artist/env/dexfile_environment.cc compiler/optimizing/artist/env/dexfile_environment.h compiler/optimizing/artist/env/codelib_symbols.cc compiler/optimizing/artist/env/codelib_symbols.h compiler/optimizing/artist/artist_typedefs.h)
+
 
 find_package(JNI)
 
@@ -1160,11 +1165,11 @@ include_directories(
         compiler/linker
         compiler/optimizing
         compiler/optimizing/artist
-        compiler/optimizing/artist/env
+        compiler/optimizing/artist/codelib
         compiler/optimizing/artist/injection
-        compiler/optimizing/artist/modules/analyzer
+        compiler/optimizing/artist/modules/logtimization
         compiler/optimizing/artist/modules/generic
-        compiler/optimizing/artist/modules/method-tracing
+        compiler/optimizing/artist/modules/trace
         compiler/trampolines
         compiler/utils
         dalvikvm
