Support for new ARTist features:
* improved module interface
* auto-detection of codelib dex files
* early module initialization

(cherry picked from commit 47d604f5ee9753bf5554a21f59385cb6807919aa)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,14 +229,11 @@ set(SOURCE_FILES
     compiler/optimizing/artist/artist_utils.h
     compiler/optimizing/artist/blacklist.cc
     compiler/optimizing/artist/blacklist.h
-    compiler/optimizing/artist/env/analyzer_environment.cc
-    compiler/optimizing/artist/env/analyzer_environment.h
     compiler/optimizing/artist/env/artist_environment.cc
     compiler/optimizing/artist/env/artist_environment.h
-    compiler/optimizing/artist/env/codelib.cc
-    compiler/optimizing/artist/env/codelib.h
     compiler/optimizing/artist/env/codelib_environment.cc
     compiler/optimizing/artist/env/codelib_environment.h
+    compiler/optimizing/artist/env/codelib.h
     compiler/optimizing/artist/env/java_env.cc
     compiler/optimizing/artist/env/java_env.h
     compiler/optimizing/artist/injection/boolean.h
@@ -266,13 +263,14 @@ set(SOURCE_FILES
     compiler/optimizing/artist/method_info.h
     compiler/optimizing/artist/method_info_factory.cc
     compiler/optimizing/artist/method_info_factory.h
-    compiler/optimizing/artist/modules/analyzer/logtimization.cc
-    compiler/optimizing/artist/modules/analyzer/logtimization.h
-    compiler/optimizing/artist/modules/generic/injections.h
-    compiler/optimizing/artist/modules/generic/universal_artist.cc
-    compiler/optimizing/artist/modules/generic/universal_artist.h
-    compiler/optimizing/artist/modules/method-tracing/trace_artist.cc
-    compiler/optimizing/artist/modules/method-tracing/trace_artist.h
+    compiler/optimizing/artist/modules/logtimization/logtimization_artist.cc
+    compiler/optimizing/artist/modules/logtimization/logtimization_artist.h
+    compiler/optimizing/artist/injection/universal_artist.cc
+    compiler/optimizing/artist/injection/universal_artist.h
+    compiler/optimizing/artist/modules/trace/trace_artist.cc
+    compiler/optimizing/artist/modules/trace/trace_artist.h
+    compiler/optimizing/artist/modules/trace/trace_codelib.cc
+    compiler/optimizing/artist/modules/trace/trace_codelib.h
     compiler/optimizing/artist/param_finder.cc
     compiler/optimizing/artist/param_finder.h
     compiler/optimizing/artist/verbose_printer.cc
@@ -1101,7 +1099,14 @@ set(SOURCE_FILES
     sigchainlib/sigchain.cc
     sigchainlib/sigchain.h
     sigchainlib/sigchain_dummy.cc
-)
+    compiler/optimizing/artist/modules/module_manager.cc
+    compiler/optimizing/artist/modules/module_manager.h
+    compiler/optimizing/artist/modules/module.h
+    compiler/optimizing/artist/modules/trace/trace_module.cc
+    compiler/optimizing/artist/modules/trace/trace_module.h
+    compiler/optimizing/artist/modules/logtimization/logtimization_module.cc
+    compiler/optimizing/artist/modules/logtimization/logtimization_module.h compiler/optimizing/artist/env/dexfile_environment.cc compiler/optimizing/artist/env/dexfile_environment.h compiler/optimizing/artist/env/codelib_symbols.cc compiler/optimizing/artist/env/codelib_symbols.h compiler/optimizing/artist/artist_typedefs.h)
+
 
 find_package(JNI)
 
@@ -1113,6 +1118,7 @@ endif()
 # find . -type d -not -path "./test*" -not -path "./.git*" -not -path "./.idea*" -not -path "./cmake-build*"
 include_directories(
     .
+    art
     cmdline
     cmdline/detail
     compiler
@@ -1140,16 +1146,11 @@ include_directories(
     compiler/linker/x86_64
     compiler/optimizing
     compiler/optimizing/artist
-    compiler/optimizing/artist/doc
-    compiler/optimizing/artist/doc/examples
-    compiler/optimizing/artist/doc/examples/codelib
-    compiler/optimizing/artist/doc/examples/injection
-    compiler/optimizing/artist/env
+    compiler/optimizing/artist/codelib
     compiler/optimizing/artist/injection
-    compiler/optimizing/artist/modules
-    compiler/optimizing/artist/modules/analyzer
+    compiler/optimizing/artist/modules/logtimization
     compiler/optimizing/artist/modules/generic
-    compiler/optimizing/artist/modules/method-tracing
+    compiler/optimizing/artist/modules/trace
     compiler/trampolines
     compiler/utils
     compiler/utils/arm
