--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,8 +149,6 @@ set(SOURCE_FILES
     compiler/optimizing/artist/artist_utils.h
     compiler/optimizing/artist/blacklist.cc
     compiler/optimizing/artist/blacklist.h
-        compiler/optimizing/artist/env/artist_environment.cc
-        compiler/optimizing/artist/env/artist_environment.h
         compiler/optimizing/artist/env/codelib_environment.cc
         compiler/optimizing/artist/env/codelib_environment.h
         compiler/optimizing/artist/env/codelib.h
@@ -1142,7 +1140,7 @@ set(SOURCE_FILES
     compiler/optimizing/artist/modules/trace/trace_module.cc
     compiler/optimizing/artist/modules/trace/trace_module.h
     compiler/optimizing/artist/modules/logtimization/logtimization_module.cc
-    compiler/optimizing/artist/modules/logtimization/logtimization_module.h compiler/optimizing/artist/env/dexfile_environment.cc compiler/optimizing/artist/env/dexfile_environment.h compiler/optimizing/artist/env/codelib_symbols.cc compiler/optimizing/artist/env/codelib_symbols.h compiler/optimizing/artist/artist_typedefs.h)
+    compiler/optimizing/artist/modules/logtimization/logtimization_module.h compiler/optimizing/artist/env/dexfile_environment.cc compiler/optimizing/artist/env/dexfile_environment.h compiler/optimizing/artist/env/codelib_symbols.cc compiler/optimizing/artist/env/codelib_symbols.h compiler/optimizing/artist/artist_typedefs.h compiler/optimizing/artist/error_handler.cc compiler/optimizing/artist/error_handler.h)
 
 
 find_package(JNI)
