Honoring Project-ARTist/meta#1 by skipping disabled modules
(cherry picked from commit f12cb165b0911cbdbc29ee0c16f6586b1cad68c0)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1101,6 +1101,7 @@ set(SOURCE_FILES
     sigchainlib/sigchain_dummy.cc
     compiler/optimizing/artist/modules/module_manager.cc
     compiler/optimizing/artist/modules/module_manager.h
+    compiler/optimizing/artist/modules/module.cc
     compiler/optimizing/artist/modules/module.h
     compiler/optimizing/artist/modules/trace/trace_module.cc
     compiler/optimizing/artist/modules/trace/trace_module.h
