Fixed broken CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1140,7 +1140,7 @@ set(SOURCE_FILES
     compiler/optimizing/artist/modules/trace/trace_module.cc
     compiler/optimizing/artist/modules/trace/trace_module.h
     compiler/optimizing/artist/modules/logtimization/logtimization_module.cc
-    compiler/optimizing/artist/modules/logtimization/logtimization_module.h \
+    compiler/optimizing/artist/modules/logtimization/logtimization_module.h
     compiler/optimizing/artist/env/dexfile_environment.cc
     compiler/optimizing/artist/env/dexfile_environment.h
     compiler/optimizing/artist/env/codelib_symbols.cc
